--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -1,28 +1,27 @@
-#obstacle_range: 2.5
-#raytrace_range: 7.0
-#footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
-robot_radius: 0.18
+robot_radius: 0.32
 
 inflation_layer:
-  inflation_radius: 0.3
+  inflation_radius: 0.15
 
 obstacle_laser_layer:
   obstacle_range: 2.5
   raytrace_range: 7.0
+  track_unknown_space: true
   observation_sources: laser_scan_sensor
   laser_scan_sensor: 
     data_type: LaserScan
-    topic: $(arg scan_topic)
+    topic: /laser/scan_filtered #$(arg scan_topic)
     marking: true
     clearing: true
 
 obstacle_camera_layer:
   obstacle_range: 2.5
   raytrace_range: 4.0
+  track_unknown_space: true
   observation_sources: cam_to_scan
   cam_to_scan:
     data_type: LaserScan
-    topic: $(arg cam_to_scan_topic)
+    topic: /laser/pcl_scan_filtered #$(arg cam_to_scan_topic)
     marking: true
     clearing: true
 
@@ -46,7 +45,7 @@ voxel_obstacle_layer:
   observation_sources:      rs_cam_mark rs_cam_clear
   rs_cam_mark:
     data_type: PointCloud2
-    topic: $(arg rs_cam_topic)
+    topic: /rs_cam/depth/points #$(arg rs_cam_topic)
     marking: true
     clearing: false
     min_obstacle_height: 0.3     # default 0, meters
@@ -59,7 +58,7 @@ voxel_obstacle_layer:
     clear_after_reading: true    # default false, clear the buffer after the layer gets readings from it
   rs_cam_clear:
     data_type: PointCloud2
-    topic: $(arg rs_cam_topic)
+    topic: /rs_cam/depth/points #$(arg rs_cam_topic)
     marking: false
     clearing: true
     max_z: 7.0                  # default 0, meters
@@ -68,3 +67,10 @@ voxel_obstacle_layer:
     horizontal_fov_angle: 1.048 # default 1.04, radians
     decay_acceleration: 5.0     # default 0, 1/s^2. If laser scanner MUST be 0
     model_type: 0                # default 0, model type for frustum. 0=depth camera, 1=3d lidar like VLP16 or similar
+    
+static_layer:
+  lethal_cost_threshold: 94
+  map_topic: /map #$(arg map_topic)
+  unknown_cost_value: 1
+  trinary_costmap: false
+  use_maximum: false
