--- a/config/dwa_local_planner_params.yaml
+++ b/config/dwa_local_planner_params.yaml
@@ -1,35 +1,35 @@
 DWAPlannerROS:
-  max_vel_x: 0.45
-  min_vel_x: 0.08
-  max_vel_trans: 0.45
-  min_vel_trans: 0.08
+  max_vel_x: 0.4
+  min_vel_x: -0.4
+  max_vel_trans: 0.4
+  min_vel_trans: -0.4
   
-  max_rot_vel: 1.0
-  min_rot_vel: 0.4
+  max_vel_theta: 0.6
+  min_vel_theta: -0.6
 
-  acc_lim_th: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  acc_lim_th: 0.1
+  acc_lim_x: 0.1
+  acc_lim_y: 0.1
 
   holonomic_robot: false
   
-  yaw_goal_tolerance: 0.05
-  xy_goal_tolerance: 0.05
+  yaw_goal_tolerance: 0.13
+  xy_goal_tolerance: 0.12
   latch_xy_goal_tolerance: true
   
-  sim_time: 1.4
-  sim_granularity: 0.025
-  vx_samples: 15
-  vth_samples: 20
+  sim_time: 2.0
+  sim_granularity: 0.05
+  vx_samples: 20
+  vth_samples: 10
   
   path_distance_bias: 32.0
   goal_distance_bias: 24.0
   occdist_scale: 0.5 #0.01
-  forward_point_distance: 0.15
+  forward_point_distance: 0.45
   stop_time_buffer: 0.2
-  scaling_speed: 0.15
+  scaling_speed: 0.2
   max_scaling_factor: 0.2
   publish_cost_grid: false
   
   oscillation_reset_dist: 0.05
-  prune_plan: true
+  prune_plan: false
