--- a/config/local_costmap_params.yaml
+++ b/config/local_costmap_params.yaml
@@ -1,13 +1,12 @@
 local_costmap:
-  global_frame: $(arg odom_frame)
-  robot_base_frame: $(arg base_frame)
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: false
+  global_frame: map #$(arg odom_frame)
+  robot_base_frame: base_footprint #$(arg base_frame)
+  update_frequency: 10.0
+  publish_frequency: 3.0
   rolling_window: true
-  width: 4.5
-  height: 4.5
-  resolution: 0.05
+  width: 4.0
+  height: 4.0
+  resolution: 0.02
   
   # padding is 0.1 by default, making difficult to pass through narrow places
   footprint_padding: 0.0
@@ -15,9 +14,9 @@ local_costmap:
   plugins:
     - name: obstacle_laser_layer
       type: "costmap_2d::ObstacleLayer"
-    - name: obstacle_camera_layer
-      type: "costmap_2d::ObstacleLayer"
-#    - name: obstacle_camera_layer
-#      type: "costmap_2d::VoxelLayer"
     - name: inflation_layer
       type: "costmap_2d::InflationLayer"
+#    - name: obstacle_camera_layer
+#      type: "costmap_2d::ObstacleLayer"
+#    - name: obstacle_camera_layer
+#      type: "costmap_2d::VoxelLayer"
