--- a/config/move_base_params.yaml
+++ b/config/move_base_params.yaml
@@ -1,4 +1,5 @@
 base_global_planner: global_planner/GlobalPlanner
+base_local_planner: base_local_planner/TrajectoryPlannerROS #dwa_local_planner/DWAPlannerROS
 
 controller_frequency: 20.0        # How long the controller will wait in seconds
                                   # without receiving a valid control before space-clearing 
@@ -38,4 +39,4 @@ conservative_reset:
 
 aggresive_reset:
   reset_distance: 0.0
-  layer_names: [obstacle_laser_layer, obstacle_camera_layer]
+  layer_names: [obstacle_laser_layer]
