--- a/config/base_global_planner.yaml
+++ b/config/base_global_planner.yaml
@@ -1,4 +1,10 @@
 GlobalPlanner:
+  allow_unknown: true
+  default_tolerance: 0.01 # A tolerance on the goal point for the planner.
+  use_dijkstra: false # If true, use dijkstra's algorithm. Otherwise, A*
+  use_quadratic: true # If true, use the quadratic approximation of the potential. Otherwise, use a simpler calculation.
+  use_grid_path: false # f true, create a path that follows the grid boundaries. Otherwise, use a gradient descent method.
+  old_navfn_behavior: false #
   planner_frequency: 1.0
   planner_patience: 2.0
   orientation_mode: 3 # Forward orientation until last straightaway, then a linear blend until the goal pose
