--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -1,29 +1,46 @@
-robot_radius: 0.32
+obstacle_range: 2.5
+raytrace_range: 3.0
+robot_radius: 0.25
 
+
+# used by both local and global costmaps
 inflation_layer:
-  inflation_radius: 0.15
+  enabled: true
+  inflation_radius: 0.35
+  cost_scaling_factor: 3.0
+  inflate_unknown: true
 
-obstacle_laser_layer:
+laser_obstacle_layer:
+  enabled: true
   obstacle_range: 2.5
-  raytrace_range: 7.0
+  raytrace_range: 3.0
   track_unknown_space: true
   observation_sources: laser_scan_sensor
   laser_scan_sensor: 
     data_type: LaserScan
-    topic: /laser/scan_filtered #$(arg scan_topic)
+    topic: /scan_filtered
     marking: true
     clearing: true
 
 obstacle_camera_layer:
+  enabled: true
   obstacle_range: 2.5
-  raytrace_range: 4.0
+  raytrace_range: 3.0
   track_unknown_space: true
   observation_sources: cam_to_scan
   cam_to_scan:
     data_type: LaserScan
-    topic: /laser/pcl_scan_filtered #$(arg cam_to_scan_topic)
+    topic: /scan_pcl_filtered
     marking: true
     clearing: true
+
+static_layer:
+  enabled: true
+  lethal_cost_threshold: 94
+  map_topic: /map
+  unknown_cost_value: 1
+  trinary_costmap: false
+  use_maximum: false
 
 voxel_obstacle_layer:
   enabled:                  true
@@ -45,7 +62,7 @@ voxel_obstacle_layer:
   observation_sources:      rs_cam_mark rs_cam_clear
   rs_cam_mark:
     data_type: PointCloud2
-    topic: /rs_cam/depth/points #$(arg rs_cam_topic)
+    topic: /camera/depth/points
     marking: true
     clearing: false
     min_obstacle_height: 0.3     # default 0, meters
@@ -58,7 +75,7 @@ voxel_obstacle_layer:
     clear_after_reading: true    # default false, clear the buffer after the layer gets readings from it
   rs_cam_clear:
     data_type: PointCloud2
-    topic: /rs_cam/depth/points #$(arg rs_cam_topic)
+    topic: /camera/depth/points
     marking: false
     clearing: true
     max_z: 7.0                  # default 0, meters
@@ -67,10 +84,3 @@ voxel_obstacle_layer:
     horizontal_fov_angle: 1.048 # default 1.04, radians
     decay_acceleration: 5.0     # default 0, 1/s^2. If laser scanner MUST be 0
     model_type: 0                # default 0, model type for frustum. 0=depth camera, 1=3d lidar like VLP16 or similar
-    
-static_layer:
-  lethal_cost_threshold: 94
-  map_topic: /map #$(arg map_topic)
-  unknown_cost_value: 1
-  trinary_costmap: false
-  use_maximum: false
