--- a/config/dwa_local_planner_params.yaml
+++ b/config/dwa_local_planner_params.yaml
@@ -1,35 +1,39 @@
+#dwa_local_planner::DWAPlannerROS
 DWAPlannerROS:
-  max_vel_x: 0.4
-  min_vel_x: -0.4
-  max_vel_trans: 0.4
-  min_vel_trans: -0.4
-  
-  max_vel_theta: 0.6
-  min_vel_theta: -0.6
+  # Robot configuratio parameters
+  acc_lim_th: 2.5
+  acc_lim_x: 1.5
+  max_vel_trans: 1.6
+  min_vel_trans: 0.25
+  max_vel_x: 1.6
+  min_vel_x: -0.85
+  max_rot_vel: 2.2
+  min_rot_vel: 0.35
 
-  acc_lim_th: 0.1
-  acc_lim_x: 0.1
-  acc_lim_y: 0.1
-
-  holonomic_robot: false
-  
+  # Goal Tolerance parameters
   yaw_goal_tolerance: 0.13
   xy_goal_tolerance: 0.12
   latch_xy_goal_tolerance: true
   
+  # Forward Simulation parameters
   sim_time: 2.0
   sim_granularity: 0.05
-  vx_samples: 20
-  vth_samples: 10
+  vx_samples: 15
+  vth_samples: 20
+  controller_frequency: 20
   
+  # Trajectory Scoring parameters
   path_distance_bias: 32.0
   goal_distance_bias: 24.0
-  occdist_scale: 0.5 #0.01
-  forward_point_distance: 0.45
-  stop_time_buffer: 0.2
-  scaling_speed: 0.2
-  max_scaling_factor: 0.2
+  occdist_scale: 0.03 #0.01
+  forward_point_distance: 0.45 #The distance from the center point of the robot to place an additional scoring point, in meters
+  stop_time_buffer: 0.2 #The amount of time that the robot must stop before a collision in order for a trajectory to be considered valid in seconds
+  scaling_speed: 0.3 #The absolute value of the velocity at which to start scaling the robot's footprint, in m/s
+  max_scaling_factor: 0.2 #The maximum factor to scale the robot's footprint by
   publish_cost_grid: false
   
-  oscillation_reset_dist: 0.05
-  prune_plan: false
+  # Oscillation Prevention parameters
+  oscillation_reset_dist: 0.05 #How far the robot must travel in meters before oscillation flags are reset
+
+  # Global Plan parameters
+  prune_plan: true
