--- a/config/global_costmap_params.yaml
+++ b/config/global_costmap_params.yaml
@@ -1,18 +1,19 @@
 global_costmap:
-  global_frame: map #$(arg global_frame)
-  robot_base_frame: base_footprint #$(arg base_frame)
+  global_frame: map
+  robot_base_frame: base_footprint
   update_frequency: 5.0
+  static_map: true #determines whether or not the costmap should initialize itself based on a map served by the map_server
   
   plugins:
-    - name: obstacle_laser_layer
-      type: "costmap_2d::ObstacleLayer"
+    - {name: static_layer, type: "costmap_2d::StaticLayer"}
+    - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+
 #    - name: rgbd_obstacle_layer
 #      type: "costmap_2d::VoxelLayer"
 #    - name: voxel_obstacle_layer
 #      type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"
-    - name: static_layer
-      type: "costmap_2d::StaticLayer"
 #    - name: costmap_prohibition_layer
 #      type: "costmap_prohibition_layer_namespace::CostmapProhibitionLayer"
-    - name: inflation_layer
-      type: "costmap_2d::InflationLayer"
+#    - name: inflation_layer
+#      type: "costmap_2d::InflationLayer"
