--- a/config/local_costmap_params.yaml
+++ b/config/local_costmap_params.yaml
@@ -1,21 +1,23 @@
 local_costmap:
-  global_frame: map #$(arg odom_frame)
-  robot_base_frame: base_footprint #$(arg base_frame)
-  update_frequency: 10.0
-  publish_frequency: 3.0
+  global_frame: map
+  robot_base_frame: base_footprint
+  update_frequency: 8.0
+  publish_frequency: 2.0
+  static_map: false
   rolling_window: true
-  width: 4.0
-  height: 4.0
-  resolution: 0.02
+  width: 6.0
+  height: 6.0
+  resolution: 0.03
   
   # padding is 0.1 by default, making difficult to pass through narrow places
   footprint_padding: 0.0
 
   plugins:
-    - name: obstacle_laser_layer
-      type: "costmap_2d::ObstacleLayer"
-    - name: inflation_layer
-      type: "costmap_2d::InflationLayer"
+    - {name: static_layer, type: "costmap_2d::StaticLayer"}
+    - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+    - {name: voxel_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+
 #    - name: obstacle_camera_layer
 #      type: "costmap_2d::ObstacleLayer"
 #    - name: obstacle_camera_layer
