--- a/config/local_costmap_params.yaml
+++ b/config/local_costmap_params.yaml
@@ -5,9 +5,9 @@ local_costmap:
   publish_frequency: 2.0
   static_map: false
   rolling_window: true
-  width: 6.0
-  height: 6.0
-  resolution: 0.03
+  width: 4.0
+  height: 4.0
+  resolution: 0.025
   
   # padding is 0.1 by default, making difficult to pass through narrow places
   footprint_padding: 0.0
@@ -15,7 +15,7 @@ local_costmap:
   plugins:
     - {name: static_layer, type: "costmap_2d::StaticLayer"}
     - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-    - {name: voxel_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+   # - {name: voxel_obstacle_layer, type: "costmap_2d::VoxelLayer"}
     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
 
 #    - name: obstacle_camera_layer
