--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -18,7 +18,7 @@ laser_obstacle_layer:
   observation_sources: laser_scan_sensor
   laser_scan_sensor: 
     data_type: LaserScan
-    topic: /scan_filtered
+    topic: /scan
     marking: true
     clearing: true
 
