Tunning move-base and planners (complete) | T2

--- a/config/global_costmap_params.yaml
+++ b/config/global_costmap_params.yaml
@@ -6,7 +6,7 @@ global_costmap:
   
   plugins:
     - {name: static_layer, type: "costmap_2d::StaticLayer"}
-    - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+   # - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
    # - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
 
 #    - name: rgbd_obstacle_layer
