--- a/config/dwa_local_planner_params.yaml
+++ b/config/dwa_local_planner_params.yaml
@@ -1,14 +1,14 @@
 #dwa_local_planner::DWAPlannerROS
 DWAPlannerROS:
   # Robot configuratio parameters
-  acc_lim_th: 2.5
-  acc_lim_x: 1.5
-  max_vel_trans: 1.6
-  min_vel_trans: 0.25
-  max_vel_x: 1.6
-  min_vel_x: -0.85
-  max_rot_vel: 2.2
-  min_rot_vel: 0.35
+  acc_lim_th: 0.42
+  acc_lim_x: 0.25
+  max_vel_trans: 0.85
+  min_vel_trans: 0.18
+  max_vel_x: 0.85
+  min_vel_x: -0.65
+  max_vel_theta: 1.5
+  min_vel_theta: 0.2
 
   # Goal Tolerance parameters
   yaw_goal_tolerance: 0.13
@@ -16,24 +16,24 @@ DWAPlannerROS:
   latch_xy_goal_tolerance: true
   
   # Forward Simulation parameters
-  sim_time: 2.0
-  sim_granularity: 0.05
-  vx_samples: 15
+  sim_time: 2.5
+  sim_granularity: 0.025
+  vx_samples: 20
   vth_samples: 20
   controller_frequency: 20
   
   # Trajectory Scoring parameters
   path_distance_bias: 32.0
   goal_distance_bias: 24.0
-  occdist_scale: 0.03 #0.01
-  forward_point_distance: 0.45 #The distance from the center point of the robot to place an additional scoring point, in meters
+  occdist_scale: 0.01 #0.01
+  forward_point_distance: 0.05 #The distance from the center point of the robot to place an additional scoring point, in meters
   stop_time_buffer: 0.2 #The amount of time that the robot must stop before a collision in order for a trajectory to be considered valid in seconds
-  scaling_speed: 0.3 #The absolute value of the velocity at which to start scaling the robot's footprint, in m/s
-  max_scaling_factor: 0.2 #The maximum factor to scale the robot's footprint by
+  scaling_speed: 0.4 #The absolute value of the velocity at which to start scaling the robot's footprint, in m/s
+  max_scaling_factor: 0.01 #The maximum factor to scale the robot's footprint by
   publish_cost_grid: false
   
   # Oscillation Prevention parameters
-  oscillation_reset_dist: 0.05 #How far the robot must travel in meters before oscillation flags are reset
+  oscillation_reset_dist: 0.2 #How far the robot must travel in meters before oscillation flags are reset
 
   # Global Plan parameters
   prune_plan: true
