--- a/config/move_base_params.yaml
+++ b/config/move_base_params.yaml
@@ -1,27 +1,27 @@
 base_global_planner: global_planner/GlobalPlanner
-base_local_planner: dwa_local_planner/DWAPlannerROS #base_local_planner/TrajectoryPlannerROS
+base_local_planner: base_local_planner/TrajectoryPlannerROS #dwa_local_planner/DWAPlannerROS
 
 controller_frequency: 20.0
 controller_patience: 15.0
-planner_frequency: 0.0           # The rate in Hz at which to run the global planning loop. If the frequency is set
+planner_frequency: 5.0           # The rate in Hz at which to run the global planning loop. If the frequency is set
                                  # to 0.0, the global planner will only run when a new goal is received or
                                  # the local planner reports that its path is blocked
 planner_patience: 5.0            # How long the planner will wait in seconds in an
                                   # attempt to find a valid plan before space-clearing
                                   # operations are performed
 
-conservative_reset_dist: 3.0      # The distance away from the robot in meters beyond which
+conservative_reset_dist: 0.8      # The distance away from the robot in meters beyond which
                                   # obstacles will be cleared from the costmap when attempting to
                                   # clear space in the map. Note, this parameter is only used when
                                   # the default recovery behaviors are used for move_base.
 recovery_behavior_enabled: true
-clearing_rotation_allowed: true  # attempt an in-place rotation when attempting to clear out
+clearing_rotation_allowed: false  # attempt an in-place rotation when attempting to clear out
                                   # space.
 shutdown_costmaps: false          # Determines whether or not to shutdown the costmaps of the node when
                                   # move_base is in an inactive state
 oscillation_timeout: 3.0          # How long in seconds to allow for oscillation before executing
                                   # recovery behaviors
-oscillation_distance: 0.3         # How far in meters the robot must move to be considered not
+oscillation_distance: 0.05         # How far in meters the robot must move to be considered not
                                   # to be oscillating
 max_planning_retries: 5
 
@@ -30,17 +30,17 @@ recovery_behaviors:
      name: conservative_reset
      type: clear_costmap_recovery/ClearCostmapRecovery
 
-  -
-     name: rotate_recovery
-     type: rotate_recovery/RotateRecovery
+  #-
+   #  name: rotate_recovery
+   #  type: rotate_recovery/RotateRecovery
   -
      name: aggresive_reset
      type: clear_costmap_recovery/ClearCostmapRecovery
 
 conservative_reset:
-  reset_distance: 2.5
+  reset_distance: 0.5
   layer_names: [obstacle_laser_layer, voxel_obstacle_layer]
 
 aggresive_reset:
-  reset_distance: 3.5
+  reset_distance: 1.0
   layer_names: [obstacle_laser_layer, voxel_obstacle_layer]
